<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:behavior_overlapTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_details_person">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:descendantFocusability="blocksDescendants">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/corner_top20_rectangle_white">

            <TextView
                android:id="@+id/details_person_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/size_text_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_place_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="@dimen/details_person_size_icon"
                    android:layout_height="@dimen/details_person_size_icon"
                    android:src="@drawable/ic_place"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/details_person_place_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/size_text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/container_place_birthday">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="@dimen/details_person_size_icon"
                    android:layout_height="@dimen/details_person_size_icon"
                    android:src="@drawable/ic_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/details_person_biography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="7"
                    android:scrollHorizontally="false"
                    android:singleLine="false"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/size_text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/biography_read_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:gravity="center_vertical|right"
                    android:text="@string/read_more"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_text_secondary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/details_person_biography"
                    app:layout_constraintStart_toStartOf="@+id/details_person_biography"
                    app:layout_constraintTop_toBottomOf="@+id/details_person_biography" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="@dimen/details_person_size_icon"
                android:layout_height="@dimen/details_person_size_icon"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_gender"
                app:layout_constraintStart_toStartOf="@+id/container_biography"
                app:layout_constraintTop_toBottomOf="@+id/container_biography" />

            <TextView
                android:id="@+id/details_person_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/size_text_secondary"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/details_person_size_icon"
                android:layout_height="@dimen/details_person_size_icon"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_network"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <com.nex3z.flowlayout.FlowLayout
                android:id="@+id/container_external_ids"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:flChildSpacing="4dp"
                app:flRowSpacing="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9">

                <com.github.nikartm.button.FitButton
                    android:id="@+id/external_id_themoviedb"
                    style="@style/ButtonStyle"
                    android:visibility="gone"
                    app:fb_backgroundColor="@color/color_themoviedb"
                    app:fb_text="@string/the_movie_db"
                    app:fb_textAllCaps="false"
                    app:fb_textColor="@android:color/black" />

                <com.github.nikartm.button.FitButton
                    android:id="@+id/external_id_instagram"
                    style="@style/ButtonStyle"
                    android:visibility="gone"
                    app:fb_backgroundColor="@color/color_instagram"
                    app:fb_text="@string/instagram"
                    app:fb_textAllCaps="false"
                    app:fb_textColor="@android:color/white" />


                <com.github.nikartm.button.FitButton
                    android:id="@+id/external_id_facebook"
                    style="@style/ButtonStyle"
                    android:visibility="gone"
                    app:fb_backgroundColor="@color/color_facebook"
                    app:fb_text="@string/facebook"
                    app:fb_textAllCaps="false"
                    app:fb_textColor="@android:color/white" />

                <com.github.nikartm.button.FitButton
                    android:id="@+id/external_id_imdb"
                    style="@style/ButtonStyle"
                    android:visibility="gone"
                    app:fb_backgroundColor="@color/color_imdb"
                    app:fb_text="@string/imbd"
                    app:fb_textAllCaps="false"
                    app:fb_textColor="@android:color/black" />

                <com.github.nikartm.button.FitButton
                    android:id="@+id/external_id_twitter"
                    style="@style/ButtonStyle"
                    android:visibility="gone"
                    app:fb_backgroundColor="@color/color_twitter"
                    app:fb_text="@string/twitter"
                    app:fb_textAllCaps="false"
                    app:fb_textColor="@android:color/white" />
            </com.nex3z.flowlayout.FlowLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_cast_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/cast_movies_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/size_text_primary"
                android:text="@string/details_credit_cast_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cast_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_movies_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_crew_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/crew_movies_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/size_text_primary"
                android:text="@string/details_credit_crew_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_crew_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crew_movies_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>